[gd_scene load_steps=4 format=3 uid="uid://qtub2d5pmpto"]

[ext_resource type="Script" path="res://GUI/settingmenu.gd" id="1_pyqjl"]
[ext_resource type="Texture2D" uid="uid://crvi57lkmc7vt" path="res://assets/gui/uipackSpace_sheet.png" id="2_xjyn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0lx7"]
atlas = ExtResource("2_xjyn5")
region = Rect2(199.423, 200.687, 100.329, 98.4859)

[node name="main" type="Panel"]
offset_left = 1.0
offset_top = 1.0
offset_right = 536.0
offset_bottom = 267.0
scale = Vector2(3, 3)
script = ExtResource("1_pyqjl")

[node name="main" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 1070.0
offset_bottom = 528.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Label" type="Label" parent="main"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "游戏基本设置"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="main"]
layout_mode = 2

[node name="UI" type="CheckButton" parent="main/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭所有UI"

[node name="FPS" type="CheckButton" parent="main/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭FPS显示"

[node name="EnemyNumber" type="CheckButton" parent="main/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭敌人数量显示"

[node name="BulletNumber" type="CheckButton" parent="main/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭剩余子弹显示"

[node name="HBoxContainer2" type="HBoxContainer" parent="main"]
layout_mode = 2

[node name="Energy" type="CheckButton" parent="main/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭饥饿值显示"

[node name="KilledEnergy" type="CheckButton" parent="main/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭击败敌人数量显示"

[node name="PlayTime" type="CheckButton" parent="main/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭游玩时间显示"

[node name="HBoxContainer3" type="HBoxContainer" parent="main"]
layout_mode = 2

[node name="PlayerPosition" type="CheckButton" parent="main/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "关闭玩家位置显示"

[node name="Button" type="Button" parent="main"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "关闭"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 4.0
offset_right = 1053.0
offset_bottom = 529.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_g0lx7")

[connection signal="toggled" from="main/HBoxContainer/UI" to="." method="_on_ui_toggled"]
[connection signal="toggled" from="main/HBoxContainer/FPS" to="." method="_on_fps_toggled"]
[connection signal="toggled" from="main/HBoxContainer/EnemyNumber" to="." method="_on_enemy_number_toggled"]
[connection signal="toggled" from="main/HBoxContainer/BulletNumber" to="." method="_on_bullet_number_toggled"]
[connection signal="toggled" from="main/HBoxContainer2/Energy" to="." method="_on_energy_toggled"]
[connection signal="toggled" from="main/HBoxContainer2/KilledEnergy" to="." method="_on_killed_energy_toggled"]
[connection signal="toggled" from="main/HBoxContainer2/PlayTime" to="." method="_on_play_time_toggled"]
[connection signal="toggled" from="main/HBoxContainer3/PlayerPosition" to="." method="_on_player_position_toggled"]
[connection signal="pressed" from="main/Button" to="." method="_on_button_pressed"]
